# SlideMaker

./: .gitignore  Cargo.toml
Media/: Nouveau raccourci.lnk
Media/Cipher Academy/: Shonen-Jump-Cipher-Academy-top.avif
SlidePrintempsV5/docProps/: core.xml
SlidePrintempsV5/ppt/: presProps.xml  viewProps.xml
SlidePrintempsV5/ppt/handoutMasters/: handoutMaster1.xml
SlidePrintempsV5/ppt/notesMasters/: notesMaster1.xml
SlidePrintempsV5/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout12.xml  slideLayout13.xml  slideLayout14.xml  slideLayout15.xml  slideLayout16.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
SlidePrintempsV5/ppt/slideMasters/: slideMaster1.xml
SlidePrintempsV5/ppt/slides/: slide1.xml  slide10.xml  slide2.xml  slide3.xml  slide4.xml
SlidePrintempsV6/: [Content_Types].xml
SlidePrintempsV6/docProps/: app.xml  core.xml
SlidePrintempsV6/ppt/: presentation.xml  viewProps.xml
SlidePrintempsV6/ppt/_rels/: presentation.xml.rels
SlidePrintempsV6/ppt/handoutMasters/: handoutMaster1.xml
SlidePrintempsV6/ppt/notesMasters/: notesMaster1.xml
SlidePrintempsV6/ppt/slideLayouts/: slideLayout1.xml  (+14 more)
SlideTemplateStpHiverV5/: [Content_Types].xml
SlideTemplateStpHiverV5/docProps/: app.xml  core.xml
SlideTemplateStpHiverV5/ppt/: presentation.xml  viewProps.xml
src/: main.rs
src/pptx/: create.rs  mod.rs  update.rs
src/ranking/: operations.rs
src/utils/: file_operations.rs  mod.rs  request.rs
(+59 files in other folders)
