[package]
name = "slide_maker"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.5"
minidom = "0.15.2"
regex = "1.9.5"
serde_json = "1.0.107"
jumprankingsapi = {git = "https://github.com/RobinsonSdG/ShonenJumpRankings", branch="main"}
reqwest = {version = "0.11.18", features = ["blocking"]}
image = "0.24.7"
walkdir = "2.4.0"
rand = "0.8.5"
xml-rs = "0.8.19"
#jumprankingsapi = {path = "D:/Documents/DEV/jump-rankings-api"}

tokio = {git = "https://github.com/tokio-rs/tokio", branch="master"}